force-app/main/default/objects/Accessibility_Project__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount allocated for the initiative.</description>
    <inlineHelpText>Amount allocated for the initiative.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>