force-app/main/default/objects/Accessibility_Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category of the initiative.</description>
    <inlineHelpText>Category of the initiative.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sign Language Interpreters</fullName>
            </value>
            <value>
                <fullName>Hearing Assistive Technology</fullName>
            </value>
            <value>
                <fullName>Accessibility Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>